--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ langchain_core==0.3.59
 langchain-ollama==0.3.2
 langchain_chroma==0.2.3
 langchain_community==0.3.23
+langchain_text_splitters==0.3.8
