Fix ollama message structure parsing for chat
Just using dicts for now (same as previous version)

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ langchain-ollama==0.3.2
 langchain_chroma==0.2.3
 langchain_community==0.3.23
 langchain_text_splitters==0.3.8
+# Note : httpx 0.28+ has an issue with cert/verify (or it changed)
 httpx==0.27.2
