--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ langchain_community==0.3.23
 langchain_text_splitters==0.3.8
 # Note : httpx 0.28+ has an issue with cert/verify (or it changed)
 httpx==0.27.2
+tiktoken==0.9.0
